Ignore custom environment variables.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 
 # Ignore secret token
 /config/initializers/secret_token.rb
+
+# Ignore custom environment variables
+/config/environment_variables.rb
