--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,5 @@
 /config/initializers/secret_token.rb
 
 # Ignore custom environment variables
-/config/environment_variables.yml
+/config/environments/development.rb
+/config/environments/production.rb
